# AVR-Metronome

./: CMakeLists.txt  LICENSE.md  README.md  alt_beep.c  beep.c  beep.h  encoder_control.c  encoder_control.h  lcd_com.c  lcd_com.h  lcd_control.c  lcd_control.h  makefile  metronome.c  metronome.h  program.elf  test.c  uart_com.c  uart_com.h  ui_ideas.md
datasheets/: atmega328p_tqfp_pinout
schematic/avr_metronome_1/: #auto_saved_files#  _autosave-avr_metronome_1.kicad_sch  _autosave-avr_metronome_1.sch  avr_metronome_1-cache.lib  avr_metronome_1-rescue.lib  avr_metronome_1.kicad_prl  avr_metronome_1.kicad_pro  avr_metronome_1.kicad_sch  avr_metronome_1.sch  avr_metronome_1.sch-bak  sym-lib-table
src/: beep.c  beep.h  encoder_control.c  encoder_control.h  lcd_control.c  lcd_control.h  metronome.c  uart_com.c  uart_com.h
tests/: gowno.c  test.c  test1.c
